<resources>
    <string name="app_name"><b>BookVan</b></string>
    <string name="app_version">v1.3.18b</string>

    <string name="facebook_app_id">3052904301652848</string>
    <string name="fb_login_protocol_scheme">fb3052904301652848</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="peso_sign">₱</string>

    <string name="input_fname">First Name</string>
    <string name="input_lname">Last Name</string>
    <string name="input_transport_name">Transport Name</string>
    <string name="input_account_type">Account Type</string>
    <string name="input_driver_name">Van Driver</string>
    <string name="input_van_plate">Van Plate No.</string>
    <string name="input_email">E-mail</string>
    <string name="input_chat">Message</string>
    <string name="input_chat_helper">Enter message here</string>
    <string name="input_contact_number">Contact Number</string>
    <string name="input_password">Password</string>
    <string name="input_confirm_password">Confirm Password</string>

    <string name="button_label_register">Sign Up to BookVan</string>
    <string name="button_label_login">Sign In to BookVan</string>
    <string name="login_text"><u>Sign in here.</u></string>
    <string name="register_text"><u>Sign up here.</u></string>
    <string name="forgotPasswordText"><u>Click here.</u></string>

    <string name="label_home">Home</string>
    <string name="label_dashboard">Dashboard</string>
    <string name="label_profile">Profile</string>
    <string name="label_user_profile">User Profile</string>
    <string name="label_company_profile">Company Profile</string>
    <string name="label_book">Book</string>
    <string name="label_booking">Booking</string>
    <string name="label_rent">Rent</string>
    <string name="label_schedule">Schedule</string>
    <string name="label_contact">Contact</string>
    <string name="label_partners">Our Partners</string>
    <string name="label_about">About</string>
    <string name="label_chat">Chat</string>
    <string name="label_edit">Edit</string>
    <string name="label_book_admin">Bookings</string>
    <string name="label_rent_admin">Rentals</string>
    <string name="label_scan_admin">Scan</string>
    <string name="label_schedule_admin">Schedule</string>

    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent luctus, odio eget placerat efficitur, metus enim lacinia quam, vel tristique velit orci nec eros. Cras dui libero, tincidunt ac bibendum et, scelerisque eget est. Aenean non accumsan quam. Fusce ultrices fringilla quam in rutrum. Nulla consectetur varius lacus eu euismod. Etiam dictum, ipsum non malesuada dictum, leo arcu viverra nisi, nec gravida tortor est non diam. Nulla a luctus elit. Cras posuere est ut dui imperdiet blandit. Proin semper fermentum urna, ut rhoncus nunc ultricies eget. Curabitur fringilla odio id ante porttitor, id condimentum neque bibendum. Donec vel massa nunc. Nunc odio neque, maximus quis tempor finibus, aliquet at arcu. Proin efficitur vehicula faucibus. Suspendisse interdum aliquet sapien, vel vestibulum lorem congue vitae. Mauris vitae mauris non neque pretium mollis. In scelerisque purus et dignissim malesuada.</string>

    <string-array name="rent_type">
        <item>Self-Drive</item>
        <item>Rent Driver</item>
    </string-array>

    <string-array name="category">
        <item>North</item>
        <item>South</item>
    </string-array>

    <string-array name="destinations">
        <item>Aberawan</item>
        <item>Abo-abo (Narra)</item>
        <item>Abongan (Taytay)</item>
        <item>Aborlan</item>
        <item>Alemangoan</item>
        <item>Aramaywan</item>
        <item>Bacungan</item>
        <item>Bagong Bayan</item>
        <item>Bahile</item>
        <item>Baong</item>
        <item>Bataraza</item>
        <item>Bato</item>
        <item>Bato-bato (Narra)</item>
        <item>Binduyan</item>
        <item>Brooke\'s Point</item>
        <item>Bucana</item>
        <item>Buenavista</item>
        <item>Burirao</item>
        <item>Cabayogan</item>
        <item>Calategas</item>
        <item>Caramay</item>
        <item>Cataban</item>
        <item>Danat</item>
        <item>Dumaran</item>
        <item>Dumarao</item>
        <item>El Nido</item>
        <item>Ibangle</item>
        <item>Igang</item>
        <item>Inagawan</item>
        <item>Iraan</item>
        <item>Iraan (Quezon)</item>
        <item>Isaub</item>
        <item>Isaub (Sofronio Española)</item>
        <item>Isumbo</item>
        <item>Iwahig</item>
        <item>Labog (Sofronio Española)</item>
        <item>Langogan</item>
        <item>Luzviminda</item>
        <item>Macarascas</item>
        <item>Magara (Roxas)</item>
        <item>Malatgao (Narra)</item>
        <item>Malinao</item>
        <item>Manalo</item>
        <item>Manlag (El Nido)</item>
        <item>Manlalic</item>
        <item>Maoyon</item>
        <item>Narra</item>
        <item>New Cuyo</item>
        <item>New Rizal</item>
        <item>Puerto Princesa City</item>
        <item>Pancol</item>
        <item>Panitian (Sofronio Española)</item>
        <item>Plaridel (Aborlan)</item>
        <item>Port Barton</item>
        <item>Punang (Sofronio Española)</item>
        <item>Quezon</item>
        <item>Rio Tuba</item>
        <item>Rizal</item>
        <item>Roxas</item>
        <item>Sabala</item>
        <item>Sabang</item>
        <item>Salogon</item>
        <item>Salvacion</item>
        <item>Samariñana</item>
        <item>San Carlos</item>
        <item>San Jose</item>
        <item>San Rafael</item>
        <item>San Vicente</item>
        <item>Sandoval (Narra)</item>
        <item>Sandoval (Taytay)</item>
        <item>Sibaltan (El Nido)</item>
        <item>Sicud</item>
        <item>Simpian</item>
        <item>Sofronio Española</item>
        <item>Sta. Fe</item>
        <item>Sta. Rita</item>
        <item>Tacras (Narra)</item>
        <item>Tagabinet</item>
        <item>Tagbarungis</item>
        <item>Tagbiak</item>
        <item>Tagumpay</item>
        <item>Tamlang (Brooke\'s Point)</item>
        <item>Taytay</item>
        <item>Urduja</item>
    </string-array>

    <string name="default_web_citement_secret">HQ2vZK-JQK3hgE2x3ZJdNy6B</string>
    <string name="MAPS_API_KEY">AIzaSyAQ2kMrb11I1POkP6xrTgQkaRFoov8vvJ0</string>

    <string name="about_app_name">BookVan Android</string>
    <string name="about_developer_name">Developed by OPUS.tech</string>
    <string name="about_developer_website">www.opustechph.com</string>
    <string name="chat_status_text">Enter your message below to start\nchatting with BookVan Tech Support.</string>
    <string name="chat_admin_status_text">Enter your message below to\nstart chatting with this user.</string>
    <string name="text_or">or</string>
    <string name="button_label_facebook">SIGN IN WITH FACEBOOK</string>
    <string name="button_label_google">SIGN IN WITH GOOGLE</string>
    <string name="text_not_registered">Not a member?</string>
    <string name="chat_message_admin_status_text">No conversation found.</string>
    <!--    <string name="default_web_client_id">152068433081-untm2juk1ikl5p3pumr4g603705oel45.apps.googleusercontent.com</string>-->

</resources>