<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/main_items">

        <item
            android:id="@+id/btnProfile"
            android:icon="@drawable/ic_icon_profile"
            android:title="@string/label_profile" />

        <item
            android:id="@+id/btnBooking"
            android:icon="@drawable/ic_icon_booking"
            android:title="@string/label_booking" />

        <item
            android:id="@+id/btnRentals"
            android:icon="@drawable/ic_icon_rent"
            android:title="Rent-a-Van" />

        <item
            android:id="@+id/btnSchedules"
            android:icon="@drawable/ic_icon_schedule"
            android:title="@string/label_schedule" />

        <item
            android:id="@+id/btnPartners"
            android:icon="@drawable/ic_icon_company"
            android:title="@string/label_partners" />

    </group>

    <group
        android:id="@+id/actionButtons">

        <item
            android:id="@+id/btnAbout"
            android:icon="@drawable/ic_icon_about"
            android:title="@string/label_about" />

        <item
            android:id="@+id/btnLogout"
            android:icon="@drawable/ic_btn_logout"
            android:title="Logout" />
    </group>

</menu>