<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:elevation="8dp"
        android:gravity="bottom">

        <org.imaginativeworld.whynotimagecarousel.ImageCarousel
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:showNavigationButtons="false" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="75dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:src="@drawable/bookvan_logo_full" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputTransportName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:endIconTint="@color/colorPrimary"
                app:hintEnabled="true"
                app:startIconDrawable="@drawable/ic_input_transport"
                app:startIconTint="@color/colorPrimary">

                <AutoCompleteTextView
                    android:id="@+id/inputTransportNameACT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:hint="@string/input_transport_name"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputAccountType"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:endIconTint="@color/colorPrimary"
                app:hintEnabled="true"
                app:startIconDrawable="@drawable/ic_menu_profile"
                app:startIconTint="@color/colorPrimary">

                <AutoCompleteTextView
                    android:id="@+id/inputAccountTypeACT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:hint="@string/input_account_type"
                    android:inputType="none"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/input_email"
                app:hintEnabled="true"
                app:startIconDrawable="@drawable/ic_input_email"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/lato"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/textColor"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/input_password"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/colorPrimary"
                app:hintEnabled="true"
                app:startIconDrawable="@drawable/ic_input_password"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/lato"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/textColor"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/lato"
                android:text="@string/loginText"
                app:icon="@drawable/ic_btn_login" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>