<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/lato_bold"
                            android:text="Confirm Booking"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:textColor="@color/textColor" />

                        <TextView
                            android:id="@+id/confirmBookingCustomerName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/lato"
                            android:text="for customer_id (customer_name)"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="@color/textColor" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#1F000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:hintEnabled="true"
                        app:startIconDrawable="@drawable/ic_input_transport"
                        app:startIconTint="@color/colorPrimary">

                        <AutoCompleteTextView
                            android:id="@+id/inputTransportName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/lato"
                            android:hint="@string/input_transport_name"
                            android:textColor="@color/textColor"
                            android:inputType="none"
                            android:singleLine="true"
                            android:textCursorDrawable="@null" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/input_driver_name"
                        app:hintEnabled="true"
                        app:startIconDrawable="@drawable/ic_input_van_driver"
                        app:startIconTint="@color/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputDriverName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/lato"
                            android:inputType="text"
                            android:textColor="@color/textColor"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textCursorDrawable="@null" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/input_van_plate"
                        app:hintEnabled="true"
                        app:startIconDrawable="@drawable/ic_input_plate"
                        app:startIconTint="@color/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputVanPlate"
                            android:layout_width="match_parent"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/lato"
                            android:inputType="text"
                            android:textColor="@color/textColor"
                            android:textCursorDrawable="@null" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCancelBooking"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/lato_black"
                    android:text="CANCEL"
                    android:textColor="@color/colorPrimary" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnConfirmBooking"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_black"
                    android:text="CONFIRM"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/colorPrimary" />
            </LinearLayout>

        </LinearLayout>

</LinearLayout>